--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>给你的诗</title>
+    <title>For My Rosie</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -18,6 +18,7 @@
                     <p>孤独地在一隅伫立，任凭天光穿透云隙，</p>
                     <p>投下一缕微弱的光线，轻轻触碰她的瓣尖。</p>
                 </div>
+                <div class="arrow-down"></div>
             </div>
         </section>
 
@@ -31,6 +32,7 @@
                     <p>如同所有孤独而美丽的生命，</p>
                     <p>在寂静中书写着自己的故事。</p>
                 </div>
+                <div class="arrow-down"></div>
             </div>
         </section>
 
@@ -44,6 +46,7 @@
                     <p>如同每一个被埋藏的梦，</p>
                     <p>终将被时间的阳光唤醒。</p>
                 </div>
+                <div class="ending">全诗完</div>
             </div>
         </section>
     </div>
