--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>For My Rosie</title>
+    <title>For Rosie</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -25,12 +25,12 @@
         <section class="page" id="page2">
             <div class="content">
                 <div class="poem">
-                    <p>她是孤寂的，却也那般坚韧；</p>
-                    <p>她是脆弱的，却又如此铿锵。</p>
-                    <p>她承载着矛盾，却又无可替代，</p>
+                    <p>她是孤寂的，却那般坚韧；</p>
+                    <p>她是脆弱的，却如此铿锵。</p>
+                    <p>她交织着矛盾，却独一无二，</p>
                     <p>她是那一刻、那一地独有的存在，</p>
                     <p>如同所有孤独而美丽的生命，</p>
-                    <p>在寂静中书写着自己的故事。</p>
+                    <p>在寂静中书写着自己的诗篇。</p>
                 </div>
                 <div class="arrow-down"></div>
             </div>
@@ -39,14 +39,14 @@
         <section class="page" id="page3">
             <div class="content">
                 <div class="poem">
-                    <p>我忍不住想去触摸她的枝桠，</p>
-                    <p>亲吻那洁净的花蕊，</p>
-                    <p>我想陪伴她，直到她最终绽放，</p>
-                    <p>释放出她本应拥有的生命之力，</p>
+                    <p>我忍不住想去轻抚她的枝桠，</p>
+                    <p>亲吻那纯洁的花蕊，</p>
+                    <p>我想伴她左右，直至最终绽放，</p>
+                    <p>绽放出她本应拥有的生命之力，</p>
                     <p>如同每一个被埋藏的梦，</p>
-                    <p>终将被时间的阳光唤醒。</p>
+                    <p>终将被时间的阳光唤醒……</p>
                 </div>
-                <div class="ending">全诗完</div>
+                <div class="ending">全诗完 Alfred</div>
             </div>
         </section>
     </div>
